--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
     "eslint-plugin-react": "^7.31.9",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.0",
     "typescript": "^4.8.4"
   }
 }
