--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,13 +23,13 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
-    "eslint-plugin-react": "^7.31.9",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
