add changes to tsconfig file and eslint.json file relates #2

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -21,5 +21,6 @@
     "rules": {
         "linebreak-style":0,
         "consistent-return":"off"
-    }
+    },
+    "ignorePatterns": ["__test__/*"]
 }
