--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,5 +21,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "linebreak-style": 0,
+	    "max-len": ["error", { "code": 80 }]
+	
     }
 }
