--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/CA-G12/g-lanceer/issues"
   },
-  "homepage": "https://github.com/CA-G12/g-lanceer#readme"
+  "homepage": "https://github.com/CA-G12/g-lanceer#readme",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "husky": "^8.0.1"
+  }
 }
