--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -22,5 +22,5 @@
         "linebreak-style":0,
         "consistent-return":"off"
     },
-    "ignorePatterns": ["__test__/*"]
+    "ignorePatterns": ["__test__/*", "dist/*"]
 }
