--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.ts",
     "build:tsc": "tsc",
-    "lint":"eslint --ext .ts ./",
+    "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -28,9 +28,12 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
