--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":"eslint ./src",
+    "lint": "eslint ./src",
     "fix:lint": "npm run lint --fix"
   },
   "eslintConfig": {
@@ -46,6 +46,8 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-react": "^7.31.9"
   }
 }
