--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon index.ts",
     "build:tsc": "tsc",
     "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix"
