--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prepare": "is-ci || npx husky install",
     "test": "echo tests running",
     "fix:lint": "cd server && npm run fix:lint && cd ../client && npm run fix:lint"
-
   },
   "repository": {
     "type": "git",
@@ -29,5 +28,8 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "husky": "^8.0.1"
+  },
+  "dependencies": {
+    "morgan": "^1.10.0"
   }
 }
