--- a/server/package.json
+++ b/server/package.json
@@ -27,15 +27,19 @@
     "sequelize": "^6.25.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.1.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
     "ts-node": "^10.9.1",
