--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,15 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
+    container: node:latest
 
   services:
     postgres:
       image: postgres
-
       env:
         POSTGRES_PASSWORD: 123456
         POSTGRES_USER: team
@@ -32,15 +28,10 @@ jobs:
 
   steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: install dependencies
-    - run: npm ci
+    - uses: actions/setup-node@v3
+    - name: install dependancies
+      run: npm ci
     - run: npm run build --if-present
-    - name: run tests
     - run: npm test
-
       env:
-      TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
+        TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
