--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,4 @@
-name: Node.js CI
-
+name: PostgreSQL service example
 on:
   push:
     branches: [main]
@@ -7,31 +6,48 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  # Label of the container job
+  container-job:
+    # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
+    # Docker Hub image that `container-job` executes in
     container: node:latest
 
-  services:
-    postgres:
-      image: postgres
-      env:
-        POSTGRES_PASSWORD: 123456
-        POSTGRES_USER: team
-        POSTGRES_DB: test
-        POSTGRES_PORT: 5432
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: 123456
+          POSTGRES_USER: team
+          POSTGRES_DB: test
+          POSTGRES_PORT: 5432
 
-      options: >-
-        --health-cmd pg_isready
-        --health-interval 10s
-        --health-timeout 5s
-        --health-retries 5
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
-  steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: install dependancies
-      run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
+    steps:
+      # Downloads a copy of the code in your repository before running CI tests
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      # Performs a clean installation of all dependencies in the `package.json` file
+      # For more information, see https://docs.npmjs.com/cli/ci.html
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Connect to PostgreSQL
+        # Runs a script that creates a PostgreSQL table, populates
+        # the table with data, and then retrieves the data.
+        run: npm run test
+        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+        env:
+          # The hostname used to communicate with the PostgreSQL service container
+          TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
