--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "build:tsc": "tsc",
     "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix",
-    "db:seed": "cross-env NODE_ENV=development ts-node db/config/build.ts"
+    "db:seed": "cross-env SEED=true NODE_ENV=development ts-node src/db/config/build.ts"
   },
   "keywords": [],
   "author": "",
