--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build:tsc": "tsc",
     "lint": "eslint --ext .ts ./",
@@ -34,6 +34,7 @@
     "@types/jest": "^29.1.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
