--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cd server && npm run dev",
     "start": "node ./dist",
     "prepare": "is-ci || npx husky install",
-    "test": "echo tests running",
+    "test": "cd server && npm run test",
     "fix:lint": "cd server && npm run fix:lint && cd ../client && npm run fix:lint",
     "db:seed": "cd server && npm run db:seed"
   },
