--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,6 @@ jobs:
           POSTGRES_PASSWORD: 123456
           POSTGRES_USER: team
           POSTGRES_DB: test
-          POSTGRES_PORT: 5432
 
         # Set health checks to wait until postgres has started
         options: >-
@@ -58,4 +57,4 @@ jobs:
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
-          TEST_DATABASE_URL: postgres://team:123456@postgres:5432/test
+          TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
