--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,12 +22,13 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres
+        image: postgres:latest
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: 123456
+          POSTGRES_PASSWORD: pass
           POSTGRES_USER: team
           POSTGRES_DB: test
+          POSTGRES_PORT: 5432
 
         # Set health checks to wait until postgres has started
         options: >-
@@ -48,7 +49,7 @@ jobs:
       # Performs a clean installation of all dependencies in the `package.json` file
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL table, populates
@@ -57,4 +58,4 @@ jobs:
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
-          TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
+          TEST_DATABASE_URL: postgres://team:pass@postgres:5432/test
