--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,8 @@ jobs:
         env:
           POSTGRES_PASSWORD: pass
           POSTGRES_USER: team
-          POSTGRES_DB: test
+          POSTGRES_DB: glancer
+          DB_HOST: postgres
           POSTGRES_PORT: 5432
 
         # Set health checks to wait until postgres has started
@@ -58,4 +59,4 @@ jobs:
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
-          TEST_DATABASE_URL: postgres://team:pass@postgres:5432/test
+          TEST_DATABASE_URL: postgres://team:pass@postgres:5432/glancer
