--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,5 @@
-name: PostgreSQL service example
+name: Node.js CI
+
 on:
   push:
     branches: [main]
@@ -9,13 +10,10 @@ jobs:
   # Label of the container job
   container-job:
     # Containers must run in Linux based operating systems
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    strategy:
-      matrix:
-        node: [16]
-
-    name: Node ${{ matrix.node }} sample
+    container: node:16
 
     # Service containers to run with `container-job`
     services:
@@ -25,10 +23,9 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: pass
-          POSTGRES_USER: team
+          POSTGRES_USER: glancer
           POSTGRES_DB: glancer
-
+          POSTGRES_PASSWORD: glnacerpassword
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -41,10 +38,6 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
       # Performs a clean installation of all dependencies in the `package.json` file
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
@@ -57,4 +50,5 @@ jobs:
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
-          TEST_DATABASE_URL: postgres://team:pass@postgres:5432/glancer
+          TEST_DATABASE_URL: postgres://glancer:glancerpassword@postgres:5432/glancer
+          
