--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,8 +12,9 @@ jobs:
     # Containers must run in Linux based operating systems
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    # Docker Hub image that `container-job` executes in
-    container: node:16
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     # Service containers to run with `container-job`
     services:
