--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,11 @@ jobs:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    container: node:latest
+    strategy:
+      matrix:
+        node: [16]
+
+    name: Node ${{ matrix.node }} sample
 
     # Service containers to run with `container-job`
     services:
@@ -38,6 +42,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
       # Performs a clean installation of all dependencies in the `package.json` file
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
