--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,12 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres
+        image: postgres:13-alpine
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: 123456
           POSTGRES_USER: team
           POSTGRES_DB: test
-          POSTGRES_PORT: 5432
 
         # Set health checks to wait until postgres has started
         options: >-
@@ -37,6 +36,8 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+        ports:
+          - 5432:5432
     steps:
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
@@ -58,4 +59,4 @@ jobs:
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
-          TEST_DATABASE_URL: postgres://team:123456@postgres:5432/test
+          TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
