--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.0",
@@ -35,6 +38,8 @@
     "@types/jest": "^29.1.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
