--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,3 +60,4 @@ jobs:
         env:
           # The hostname used to communicate with the PostgreSQL service container
           TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
+          JWT_SECRET: ${{secrets.JWT_SECRET}}
