--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,3 +61,5 @@ jobs:
           # The hostname used to communicate with the PostgreSQL service container
           TEST_DATABASE_URL: postgres://team:123456@localhost:5432/test
           JWT_SECRET: ${{secrets.JWT_SECRET}}
+          FREELANCER_TOKEN: ${{secrets.FREELANCER_TOKEN}}
+          CLIENT_TOKEN: ${{secrets.CLIENT_TOKEN}}
