--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
@@ -40,6 +41,7 @@
     "@types/node": "^18.8.3",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
