--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "husky": "^8.0.1"
+  },
+  "dependencies": {
+    "@mui/lab": "^5.0.0-alpha.105"
   }
 }
