--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
+    "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
