--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -39,6 +40,7 @@
     "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
