--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build && cross-env NODE_ENV=production node ./dist/src/index.js",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "build:tsc": "tsc",
+    "build": "tsc",
     "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix",
-    "db:seed": "cross-env SEED=true NODE_ENV=development ts-node src/db/config/build.ts"
+    "db:seed": "cross-env SEED=true NODE_ENV=development ts-node src/db/config/build.ts",
+    "build:db:production": "cross-env NODE_ENV=production SEED=true ts-node ./src/db/config/build.ts"
   },
   "keywords": [],
   "author": "",
