--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "init": " cd server && npm i && cd ../client && npm i",
     "install": "npm run init",
     "dev": "cd server && npm run dev",
-    "start": "node ./dist",
+    "start": "cd server && npm start",
     "prepare": "is-ci || npx husky install",
     "test": "cd server && npm run test",
     "fix:lint": "cd server && npm run fix:lint && cd ../client && npm run fix:lint",
-    "db:seed": "cd server && npm run db:seed"
+    "db:seed": "cd server && npm run db:seed",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
