--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "typescript": "^4.8.4",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.0",
@@ -58,7 +59,6 @@
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1"
   }
 }
