--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build:tsc && cross-env NODE_ENV=production node ./dist/src/index.js",
+    "start": "npm run build:tsc && cross-env NODE_ENV=production node ./dist/index.js",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build:tsc": "tsc",
