--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,                                     
     "skipLibCheck": true,
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
   },     
   "include": ["src","__tests__/**.ts"],
   "exclude": ["__tests__/**.ts"]                      
