--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "npm run build:tsc && cross-env NODE_ENV=production node ./dist/index.js",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
