--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index",
-  "typings": "dist/index",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "npm run build:tsc && cross-env NODE_ENV=production node ./dist/index.js",
+    "start": "npm run build && cross-env NODE_ENV=production node ./dist/index.js",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "build:tsc": "tsc",
+    "build": "tsc",
     "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix",
     "db:seed": "cross-env SEED=true NODE_ENV=development ts-node src/db/config/build.ts",
