--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                     
     "skipLibCheck": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "rootDir": "./src",
   },     
   "include": ["src","__tests__/**.ts"],
