--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,9 +7,8 @@
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                     
     "skipLibCheck": true,
-    "outDir": "dist",
-    "rootDir": "./src",
-  },     
+    "outDir": "dist"
+    },     
   "include": ["src","__tests__/**.ts"],
   "exclude": ["__tests__/**.ts"]                      
 }
