--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npm run build && NODE_ENV=production node ./dist/index.js",
+    "start": "NODE_ENV=production node ./dist/index.js",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+    "postinstall": "tsc",
     "build": "tsc",
     "lint": "eslint --ext .ts ./",
     "fix:lint": "npm run lint --fix",
