--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cd server && npm start",
+    "postinstall": "tsc",
     "client": "cd client && npm run start",
     "init": " cd server && npm i && cd ../client && npm i",
     "install": "npm run init",
