--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production npm run build && node ./dist/index.js && cd .. && npm run client",
+    "start": "cross-env NODE_ENV=production && npm run build && node ./dist/index.js && cd .. && npm run client",
     "test": "cross-env NODE_ENV=test jest -- index.test.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build": "tsc",
