--- a/server/package.json
+++ b/server/package.json
@@ -33,13 +33,13 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@types/express": "^4.17.14"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
