--- a/server/package.json
+++ b/server/package.json
@@ -34,9 +34,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.0",
     "yup": "^0.32.11",
-    "@types/express": "^4.17.14"
-  },
-  "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
@@ -49,7 +47,9 @@
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0"
+  },
+  "devDependencies": {
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
