--- a/server/package.json
+++ b/server/package.json
@@ -47,7 +47,8 @@
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0"
+    "@typescript-eslint/parser": "^5.40.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
@@ -55,7 +56,6 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.2.1",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
