--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-  
-    "target": "es2016",                                 
+    "moduleResolution": "node",
+    "target": "es6",                                 
     "module": "commonjs",                                
     "esModuleInterop": true,                             
     "forceConsistentCasingInFileNames": true,          
