--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.0",
+    "socket.io": "^4.5.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
